[gd_scene load_steps=7 format=3 uid="uid://bfpegqboaskg6"]

[ext_resource type="Script" uid="uid://b30d73yiu1pb4" path="res://level_interface.gd" id="1_ta4wj"]
[ext_resource type="Script" uid="uid://dtwh5roueex1s" path="res://player/inventory_ui.gd" id="1_u453c"]
[ext_resource type="Theme" uid="uid://ymm1n4k8ahab" path="res://ui/ui_theme.tres" id="3_grx74"]
[ext_resource type="Texture2D" uid="uid://dy113bsj6ku48" path="res://images/uiIcons.png" id="3_sb6wj"]

[sub_resource type="LabelSettings" id="LabelSettings_prnbh"]
font_size = 32
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sb6wj"]
font_size = 20

[node name="LevelInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_grx74")
script = ExtResource("1_ta4wj")

[node name="InteractText" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -72.0
offset_right = 365.0
offset_bottom = -27.0
grow_vertical = 0
alignment = 2
vertical = true

[node name="Interact" type="Label" parent="InteractText"]
visible = false
layout_mode = 2
text = "Press E to interact"
label_settings = SubResource("LabelSettings_prnbh")

[node name="MenuButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -456.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 80.0
grow_horizontal = 0
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="MenuButtons"]
layout_mode = 2
theme = ExtResource("3_grx74")

[node name="MenuButton" type="Button" parent="MenuButtons/PanelContainer"]
layout_mode = 2
tooltip_text = "Open recipes"
icon = ExtResource("3_sb6wj")
flat = true

[node name="Orders" type="PanelContainer" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 536.0
offset_bottom = 62.0
theme = ExtResource("3_grx74")

[node name="MarginContainer" type="MarginContainer" parent="Orders"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="OrderLayout" type="BoxContainer" parent="Orders/MarginContainer"]
layout_mode = 2
theme = ExtResource("3_grx74")

[node name="OrdersLabel" type="Label" parent="Orders/MarginContainer/OrderLayout"]
layout_mode = 2
text = "Orders"
label_settings = SubResource("LabelSettings_sb6wj")

[node name="Inventory" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -120.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1, 0.999195)
theme = ExtResource("3_grx74")
script = ExtResource("1_u453c")

[node name="TextureRect" type="TextureRect" parent="Inventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemDescription" type="PanelContainer" parent="Inventory"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = -0.384615
anchor_right = 0.991071
anchor_bottom = -0.432692
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Inventory/ItemDescription"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="Inventory/ItemDescription/MarginContainer"]
layout_mode = 2
theme = ExtResource("3_grx74")
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="MachineInfo" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 88.0
offset_right = -18.0
offset_bottom = 116.0
grow_horizontal = 0
theme = ExtResource("3_grx74")

[node name="MarginContainer" type="MarginContainer" parent="MachineInfo"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="MachineInfo/MarginContainer"]
layout_mode = 2
theme = ExtResource("3_grx74")
bbcode_enabled = true
text = "Test[ul]
Item
Item 2[ul]
sublist
[/ul]
wow
[/ul]"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[connection signal="mouse_entered" from="Inventory" to="Inventory" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Inventory" to="Inventory" method="_on_mouse_exited"]
