[gd_scene load_steps=17 format=3 uid="uid://bfpegqboaskg6"]

[ext_resource type="Script" uid="uid://b30d73yiu1pb4" path="res://ui/level_interface.gd" id="1_ta4wj"]
[ext_resource type="Script" uid="uid://dtwh5roueex1s" path="res://player/inventory_ui.gd" id="1_u453c"]
[ext_resource type="Theme" uid="uid://ymm1n4k8ahab" path="res://ui/ui_theme.tres" id="3_grx74"]
[ext_resource type="FontFile" uid="uid://cxnoipmvnvnbx" path="res://ui/RobotoMono-Bold.ttf" id="4_hpumr"]
[ext_resource type="FontFile" uid="uid://cwoqt2bg7q6fi" path="res://ui/RobotoMono-Regular.ttf" id="4_lfe7y"]
[ext_resource type="PackedScene" uid="uid://d4k8uvcvp373t" path="res://ui/Order.tscn" id="5_py5b0"]
[ext_resource type="StyleBox" uid="uid://becn8jxbdeah2" path="res://ui/stylebox/9_patch_stylebox_green.tres" id="5_xj0kr"]
[ext_resource type="Script" uid="uid://c3lqjh572wxjl" path="res://scripts/hide_control.gd" id="9_xj0kr"]
[ext_resource type="PackedScene" uid="uid://ckc3r4mx3l22v" path="res://ui/InteractKeybindHint.tscn" id="10_4hwu7"]

[sub_resource type="LabelSettings" id="LabelSettings_oftlk"]
font = ExtResource("4_lfe7y")
font_size = 24
font_color = Color(0.99, 0.97515, 0.8415, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lfe7y"]
font = ExtResource("4_lfe7y")
font_size = 24
font_color = Color(0.862099, 0.846188, 0.987023, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xj0kr"]

[sub_resource type="LabelSettings" id="LabelSettings_xj0kr"]
font = ExtResource("4_lfe7y")
font_size = 24
font_color = Color(0.797452, 0.88977, 0.948186, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5j5is"]
font = ExtResource("4_lfe7y")
font_size = 24
font_color = Color(0.356863, 0.745098, 0.584314, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sb6wj"]
font = ExtResource("4_hpumr")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_7oa8n"]
font = ExtResource("4_hpumr")
font_size = 20

[node name="LevelInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_grx74")
script = ExtResource("1_ta4wj")

[node name="InfoDisplays" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -456.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 43.0
grow_horizontal = 0
alignment = 2

[node name="ReputationDisplay" type="PanelContainer" parent="InfoDisplays"]
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
tooltip_text = "The current day."

[node name="MarginContainer" type="MarginContainer" parent="InfoDisplays/ReputationDisplay"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="ReputationLabel" type="Label" parent="InfoDisplays/ReputationDisplay/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reputation: 5/5"
label_settings = SubResource("LabelSettings_oftlk")

[node name="DayNumber" type="PanelContainer" parent="InfoDisplays"]
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
tooltip_text = "The current day."

[node name="MarginContainer" type="MarginContainer" parent="InfoDisplays/DayNumber"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="DayLabel" type="Label" parent="InfoDisplays/DayNumber/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Day 5"
label_settings = SubResource("LabelSettings_lfe7y")

[node name="Time" type="PanelContainer" parent="InfoDisplays"]
custom_minimum_size = Vector2(256, 48)
layout_mode = 2
tooltip_text = "The current time. The store is open from 9:00 AM to 5:00 PM."

[node name="TimeProgress" type="ProgressBar" parent="InfoDisplays/Time"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxEmpty_xj0kr")
theme_override_styles/fill = ExtResource("5_xj0kr")
min_value = 7.0
max_value = 17.0
value = 8.0
show_percentage = false

[node name="TimeLabel" type="Label" parent="InfoDisplays/Time/TimeProgress"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 15.0
offset_top = 7.0
offset_right = 116.0
offset_bottom = 40.0
text = "5:33 PM"
label_settings = SubResource("LabelSettings_xj0kr")

[node name="Money" type="PanelContainer" parent="InfoDisplays"]
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
tooltip_text = "Your balance. "

[node name="MarginContainer" type="MarginContainer" parent="InfoDisplays/Money"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="MoneyLabel" type="Label" parent="InfoDisplays/Money/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "$0"
label_settings = SubResource("LabelSettings_5j5is")

[node name="OrdersLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 24.0
offset_top = 16.0
offset_right = 96.0
offset_bottom = 43.0
text = "Orders"
label_settings = SubResource("LabelSettings_sb6wj")

[node name="OrderLayout" type="BoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 24.0
offset_top = 48.0
offset_right = 296.0
offset_bottom = 176.0
theme = ExtResource("3_grx74")
vertical = true

[node name="Order" parent="OrderLayout" instance=ExtResource("5_py5b0")]
layout_mode = 2

[node name="Inventory" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -104.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1, 0.999195)
theme = ExtResource("3_grx74")
script = ExtResource("1_u453c")

[node name="TextureRect" type="TextureRect" parent="Inventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemDescription" type="PanelContainer" parent="Inventory"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = -0.545894
anchor_right = 1.0
anchor_bottom = -0.545894
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("9_xj0kr")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Inventory/ItemDescription"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="ItemDescriptionLabel" type="RichTextLabel" parent="Inventory/ItemDescription/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_grx74")
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="InteractionInfo" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 72.0
offset_right = -18.0
offset_bottom = 100.0
grow_horizontal = 0
theme = ExtResource("3_grx74")
script = ExtResource("9_xj0kr")

[node name="MarginContainer" type="MarginContainer" parent="InteractionInfo"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="InteractionInfo/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="InteractionName" type="Label" parent="InteractionInfo/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_grx74")
text = "Interactable name idk"
label_settings = SubResource("LabelSettings_7oa8n")

[node name="InteractionDescription" type="RichTextLabel" parent="InteractionInfo/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_grx74")
bbcode_enabled = true
text = "Test[ul]
Item
Item 2[ul]
sublist
[/ul]
wow
[/ul]"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="PrimaryInteract" parent="InteractionInfo/MarginContainer/VBoxContainer" instance=ExtResource("10_4hwu7")]
unique_name_in_owner = true
layout_mode = 2
key = "E"
placeholderText = "Primary interact"

[node name="SecondaryInteract" parent="InteractionInfo/MarginContainer/VBoxContainer" instance=ExtResource("10_4hwu7")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="mouse_entered" from="Inventory" to="Inventory" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Inventory" to="Inventory" method="_on_mouse_exited"]
